# wordbender

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  config.py  pyproject.toml  pytest.ini  wordbender.py
.github/workflows/: ci.yml
cli/: app.py  commands.py  factories.py  session.py
config/: config-helper.py  config.py
generators/: password_wordlist_generator.py
llm_services/: anthropic_llm_service.py  llm_service.py  open_router_llm_service.py  openrouter_llm_service.py
tests/: base_llm_test.py  conftest.py  test_constants.py
tests/fixtures/: conftest.py
tests/integration/: test_batch_processing.py  test_configuration_flow.py  test_generation_flow.py
tests/unit/: test_config.py
tests/unit/cli/: test_app_dry_run.py  test_batch_dry_run.py  test_factories.py
tests/unit/llm_services/: test_anthropic_llm_service.py  test_llm_service.py  test_openrouter_llm_service.py
tests/unit/wordlist_generators/: test_cloud_resource_wordlist_generator.py  test_cloud_wordlist_generator.py  test_directory_wordlist_generator.py  test_password_wordlist_generator.py  test_prompt_templates.py  test_subdomain_wordlist_generator.py  test_wordlist_generator.py
wordlist_generators/: cloud_resource_wordlist_generator.py  cloud_wordlist_generator.py  directory_wordlist_generator.py  password_wordlist_generator.py  prompt_templates.py  subdomain_wordlist_generator.py  wordlist_generator.py
