[project]
name = "wordbender"
version = "0.1.0"
description = "LLM-powered targeted wordlist generator for penetration testing"
authors = [{ name = "Ben Eisner (@backuardo)", email = "ben@beneisner.io" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "prompt-toolkit>=3.0.51",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "yaspin>=3.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "pytest-timeout>=2.2.0",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", ".venv", "venv", "*/site-packages/*"]
